<resources>
    <string name="app_name">Happiness</string>
    <string name="title_mail">Mail</string>
    <string name="title_album">Album</string>
    <string name="title_wishes">Wish List</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_failed_please_try_again">Sign in failed. Please try again.</string>
    <string name="compose">Compose</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_family">Family</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="server_client_id">785698997732-fj0lks225sgv1q7jfendm1v0jum7bkq4.apps.googleusercontent.com</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="title_sms_verification">SMS Verification</string>
    <string name="server_failed_please_try_again">Server failed. Please try again.</string>
    <string name="title_create_family">Create Family</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="view_album_in_images">view_album_in_images</string>
    <string name="author">작성자:</string>
    <string name="contributors">기여자</string>
    <string name="finish">완료</string>
    <string name="finished">완료됨</string>
<!--    <string name="server_url">http://10.0.2.2:5000</string>-->
    <string name="server_url">http://35.223.119.67</string>
</resources>