<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/mailFragment"
        android:name="com.family.happiness.ui.home.MailFragment"
        android:label="@string/title_mail"
        tools:layout="@layout/fragment_mail" >
        <action
            android:id="@+id/action_mailFragment_to_mailWriteFragment"
            app:destination="@id/mailWriteFragment" />
        <action
            android:id="@+id/action_mailFragment_to_mailReadFragment"
            app:destination="@id/mailReadFragment" />
    </fragment>
    <fragment
        android:id="@+id/albumFragment"
        android:name="com.family.happiness.ui.home.AlbumFragment"
        android:label="@string/title_album"
        tools:layout="@layout/fragment_album" >
        <action
            android:id="@+id/action_albumFragment_to_photoUploadFragment"
            app:destination="@id/photoUploadFragment" />
        <action
            android:id="@+id/action_albumFragment_to_photoDetailFragment"
            app:destination="@id/photoDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/wishFragment"
        android:name="com.family.happiness.ui.home.WishFragment"
        android:label="@string/title_wishes"
        tools:layout="@layout/fragment_wish" >
        <action
            android:id="@+id/action_wishFragment_to_wishDetailFragment"
            app:destination="@id/wishDetailFragment" />
        <action
            android:id="@+id/action_wishFragment_to_wishWriteFragment"
            app:destination="@id/wishWriteFragment" />
    </fragment>
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.family.happiness.ui.auth.SignInFragment"
        android:label="@string/title_sign_in"
        tools:layout="@layout/fragment_sign_in" >
        <action
            android:id="@+id/action_signInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_signInFragment_to_mailFragment"
            app:destination="@id/mailFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.family.happiness.ui.auth.SignUpFragment"
        android:label="@string/title_sign_up"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_signUpFragment_to_smsVerificationFragment"
            app:destination="@id/smsVerificationFragment" />
        <argument
            android:name="oAuthData"
            app:argType="com.family.happiness.network.request.OAuthData" />
    </fragment>
    <action
        android:id="@+id/action_global_signInFragment"
        app:destination="@id/signInFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />
    <fragment
        android:id="@+id/smsVerificationFragment"
        android:name="com.family.happiness.ui.auth.SmsVerificationFragment"
        android:label="@string/title_sms_verification"
        tools:layout="@layout/fragment_sms_verification">
        <argument
            android:name="phone"
            app:argType="string" />
        <argument
            android:name="oAuthData"
            app:argType="com.family.happiness.network.request.OAuthData" />
        <action
            android:id="@+id/action_smsVerificationFragment_to_mailFragment"
            app:destination="@id/mailFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/createFamilyFragment"
        android:name="com.family.happiness.ui.createfamily.CreateFamilyFragment"
        android:label="@string/title_create_family"
        tools:layout="@layout/fragment_create_family" />
    <action android:id="@+id/action_global_createFamilyFragment" app:destination="@id/createFamilyFragment" />
    <fragment
        android:id="@+id/photoUploadFragment"
        android:name="com.family.happiness.ui.photoupload.PhotoUploadFragment"
        android:label="Upload Image"
        tools:layout="@layout/fragment_photo_upload">
        <argument
            android:name="uris"
            app:argType="android.net.Uri[]"/>
    </fragment>
    <fragment
        android:id="@+id/photoDetailFragment"
        android:name="com.family.happiness.ui.photodetail.PhotoDetailFragment"
        android:label="Detail View"
        tools:layout="@layout/fragment_photo_detail" >
        <argument
            android:name="photo"
            app:argType="com.family.happiness.room.photo.Photo" />
    </fragment>
    <fragment
        android:id="@+id/wishDetailFragment"
        android:name="com.family.happiness.ui.wishdetail.WishDetailFragment"
        android:label="Wish Detail"
        tools:layout="@layout/fragment_wish_detail" >
        <argument
            android:name="wishDetail"
            app:argType="com.family.happiness.room.wish.WishDetail" />
        <action
            android:id="@+id/action_wishDetailFragment_to_wishWriteFragment"
            app:destination="@id/wishWriteFragment" />
        <action
            android:id="@+id/action_wishDetailFragment_to_wishFinishFragment"
            app:destination="@id/wishFinishFragment" />
    </fragment>
    <fragment
        android:id="@+id/wishWriteFragment"
        android:name="com.family.happiness.ui.wishnwrite.WishWriteFragment"
        android:label="Edit Wish"
        tools:layout="@layout/fragment_wish_write" >
        <argument
            android:name="wishDetail"
            app:argType="com.family.happiness.room.wish.WishDetail"
            app:nullable="true" />
        <action
            android:id="@+id/action_wishWriteFragment_to_wishFragment"
            app:destination="@id/wishFragment"
            app:popUpTo="@id/wishFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/wishFinishFragment"
        android:name="com.family.happiness.ui.wishfinish.WishFinishFragment"
        android:label="Select Contributor"
        tools:layout="@layout/fragment_wish_finish" >
        <argument
            android:name="wish"
            app:argType="com.family.happiness.room.wish.Wish" />
        <action
            android:id="@+id/action_wishFinishFragment_to_wishFragment"
            app:destination="@id/wishFragment"
            app:popUpTo="@id/wishFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/mailWriteFragment"
        android:name="com.family.happiness.ui.mailwrite.MailWriteFragment"
        android:label="New Mail"
        tools:layout="@layout/fragment_mail_write" />
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.family.happiness.ui.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_mailFragment"
            app:destination="@id/mailFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/mailReadFragment"
        android:name="com.family.happiness.ui.mailread.MailReadFragment"
        android:label="fragment_mail_read"
        tools:layout="@layout/fragment_mail_read" >
        <argument
            android:name="mailDetail"
            app:argType="com.family.happiness.room.mail.MailDetail" />
    </fragment>
</navigation>